--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,21 @@
+<div class="header--container">
+  <div class="title">
+    <div class="word">
+      <span class="first">l</span>
+      <span>e</span>
+    </div>
+
+    <div class="word">
+      <span class="last">v</span>
+      <span>e</span>
+      <span>r</span>
+      <span>s</span>
+      <span>e</span>
+      <span>t</span>
+    </div>
+  </div>
+</div>
+
 <div class="page-container">
   <vs-board *ngIf="currentRow() < 6; else endTemp" />
 
