--- a/src/app/pages/end/end.component.html
+++ b/src/app/pages/end/end.component.html
@@ -1,4 +1,11 @@
 <div class="end-container">
+  <p>La rérence était</p>
+
+  <h3 class="ref-value" *ngIf="versle() as versleValue">
+    {{ versleValue.book | book }} {{ versleValue.chapter }} :
+    {{ versleValue.verse }}
+  </h3>
+
   <div class="link-container" *ngIf="url() as urlValue">
     <div class="url-btn">
       <a [href]="urlValue" target="_blank">Lire le passage</a>
@@ -6,7 +13,7 @@
   </div>
 
   <div class="date-container">
-    <p class="remaining">Prochain mot dans:</p>
+    <p class="remaining"><b> Prochain mot dans:</b></p>
     <p class="remaining">{{ countdown() }}</p>
   </div>
 </div>
